# wb-rest-order

./: .env  Cargo.toml
src/: main.rs
src/resources/: log4rs.yaml
